# engine

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  Sandbox.cpp
sandbox/assets/shaders/: shader.frag  shader.vert
sandbox/src/: CMakeLists.txt  RenderSystem.h  Sandbox.cpp  SandboxScene.h
src/: CMakeLists.txt
src/Core/: Application.cpp  Application.h  CMakeLists.txt  Engine.cpp  Engine.h  EntryPoint.cpp  EntryPoint.h  Event.cpp  Event.h  Game.h  Log.h  Platform.cpp  Platform.h  Scene.cpp  Scene.h  Time.h  Window.h  World.cpp  World.h
src/ECS/: CMakeLists.txt  Components.h  System.cpp  System.h
src/ECS/Systems/: CMakeLists.txt  CubeShooterSystem.h  FreeCameraSystem.h  PhysicsSystem.h  PlayerMovementSystem.h  RenderSystem.h
src/Event/: CMakeLists.txt  Event.h
src/Graphics/: BufferLayout.h  CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
src/GraphicsPlatform/: CMakeLists.txt
src/GraphicsPlatform/OpenGL/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderUnit.cpp  ShaderUnit.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Input/: CMakeLists.txt  Input.h  Keycode.h  Mousecode.h
src/Platform/: CMakeLists.txt  Platform.cpp  Platform.h
src/Platform/Desktop/: CMakeLists.txt  InputDesktop.cpp  InputDesktop.h  PlatformDesktop.cpp  PlatformDesktop.h  WindowDesktop.cpp  WindowDesktop.h  WindowGLFW.cpp  WindowGLFW.h
src/Platform/Desktop/Window/: CMakeLists.txt  WindowGLFW.cpp
src/Platform/GLFW/: CMakeLists.txt  PlatformGLFW.cpp  PlatformGLFW.h
src/Platform/GLFW/Window/: WindowGLFW.cpp  WindowGLFW.h
src/Platform/Window/: CMakeLists.txt  Window.h
src/Platform/Window/GLFW/: CMakeLists.txt
src/Utils/: AABB.h  CMakeLists.txt  Event.cpp  Event.h  Singleton.hpp
